<resources>
    <string name="app_name">appjamaa</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="logo">Logo</string>
    <string name="jamaa">JAMAA</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="account_id">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="your_email">Enter Your Email</string>
    <string name="create_password">Create a new password</string>
    <string name="confirm_password">Repeat your password</string>
    <string name="reset_password">No problem. Enter your email and we\'ll send you a link to reset your password.</string>
    <string name="recover_password">An email with a link to reset your password has been sent to INFO@INFO.COM. Check your email to log back into your account."</string>
    <string name="title_contracts">Create a Contract</string>
    <string name="button_create_contract">Create Contract</string>
    <string name="label_username">Username Here</string>
    <string name="member_since">Joined xx months ago</string>
    <string name="number_projects">0000 projects</string>
    <string name="invested_in">000 projects</string>
    <string name="profitability">00%</string>
    <string name="label_number_projects">Participated In</string>
    <string name="label_invested_in">Invested In</string>
    <string name="label_profitability">Profitability</string>
    <string name="next_step">Continue</string>





    <!-- Contract Dialog -->
    <string name="welcome_description">Describe your project here.</string>
    <string name="description_contract_summary">Confirm that all of the details are correct</string>
    <string name="title_contract_summary">Contract Summary</string>

    <string name="label_profit_share_percentage">Profit Share</string>
    <string name="confirm_contract">Confirm</string>
    <string name="label_project_name">Project Name</string>
    <string name="label_user_contract_summary">Contract Manager:</string>
    <string name="label_name_contract_summary">Contract Name:</string>
    <string name="label_begin_contract_summary">Begin Date:</string>
    <string name="label_end_contract_summary">End Date:</string>
    <string name="label_duration_contract_summary">Total Length:</string>
    <string name="label_goal_contract_summary">Funding Goal:</string>
    <string name="label_low_contract_summary">Low Estimate of Expected Profit:</string>
    <string name="label_high_contract_summary">High Estimate of Expected Profit:</string>
    <string name="label_profit_contract_summary">Profit Split:</string>

    <string name="create_contract">Create Contract</string>

    <string name="text_project_name">Dummy Name</string>
    <string name="text_user_contract_summary">Dummy Name</string>
    <string name="text_name_contract_summary">Dummy Name</string>
    <string name="text_begin_contract_summary">Dummy Name</string>
    <string name="text_end_contract_summary">Dummy Name</string>
    <string name="text_duration_contract_summary">Dummy Name</string>
    <string name="text_goal_contract_summary">Dummy Name</string>
    <string name="text_low_contract_summary">Dummy Name</string>
    <string name="text_high_contract_summary">Dummy Name</string>
    <string name="text_profit_contract_summary">Dummy Name</string>





    <!-- Welcome Screen -->
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>

    <string name="prompt_seed_phrase">Any funds you deposit to Jamaa will be stored on your device, meaning we do not have access to your funds. To secure your funds against the loss or damage of your device, generate a 12-word seed phrase now."</string>


    <!-- Success Screens -->
    <string name="success">Success!</string>
    <string name="confirmation_email">Thanks for signing up. We sent an email to EXAMPLE@INFO.COM. Check your email and click on the confirmation link to log in..</string>
    <string name="back_login">Back to Log In</string>



    <!-- Cards -->
    <string name="project_title">Project Title</string>
    <string name="project_symbol">Project Symbol</string>
    <string name="project_size">0000000</string>
    <string name="project_size_label">Funding Goal</string>
    <string name="project_est_return">000000</string>
    <string name="project_est_return_label">Est. Return</string>
    <string name="project_length">000 days</string>
    <string name="project_length_label">Length</string>
    <string name="project_trust_level_label">Trust Level</string>
    <string name="select_profit_sharing">Profit Sharing Contract</string>
    <string name="contract">Contract</string>
    <string name="exchange">Exchange</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>

    <!-- Information -->
    <string name="projects">Projects</string>
    <string name="users">Users</string>

</resources>
