<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_contract"
        android:icon="@mipmap/ic_contract"
        android:title="@string/contract" />
    <item
        android:id="@+id/navigation_exchange"
        android:icon="@mipmap/ic_exchange"
        android:title="@string/exchange" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@mipmap/ic_wallet"
        android:title="@string/wallet" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_startup"
        android:title="@string/profile" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_home"
        android:title="@string/home" />
</menu>