<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:text="@string/title_contract_summary"
        />

    <TextView
        android:id="@+id/description_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/description_contract_summary" />


    <TextView
        android:id="@+id/label_user_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_user_contract_summary"
        />

    <TextView
        android:id="@+id/text_user_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        android:text="@string/text_user_contract_summary"
        />

    <TextView
        android:id="@+id/label_name_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_name_contract_summary"
     />


    <TextView
        android:id="@+id/text_name_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="150dp"
        android:gravity="right"
        android:text="@string/text_name_contract_summary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_begin_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_begin_contract_summary"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/text_begin_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_begin_contract_summary"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/label_end_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_end_contract_summary"
        android:layout_marginTop="250dp"
        />

    <TextView
        android:id="@+id/text_end_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_end_contract_summary"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        />


    <TextView
        android:id="@+id/label_duration_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_duration_contract_summary"
        android:layout_marginTop="300dp"
        />

    <TextView
        android:id="@+id/text_duration_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_duration_contract_summary"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/label_goal_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_goal_contract_summary"
        android:layout_marginTop="350dp"

        />

    <TextView
        android:id="@+id/text_goal_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_goal_contract_summary"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/label_low_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_low_contract_summary"
        android:layout_marginTop="400dp"
        />

    <TextView
        android:id="@+id/text_low_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        android:text="@string/text_low_contract_summary"
        android:layout_marginTop="400dp"
        />

    <TextView
        android:id="@+id/label_high_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_high_contract_summary"
        android:layout_marginTop="450dp"
        />

    <TextView
        android:id="@+id/text_high_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:textSize="16sp"
        android:text="@string/text_high_contract_summary"
        android:layout_marginTop="450dp"
        />

    <TextView
        android:id="@+id/label_profit_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:text="@string/label_profit_contract_summary"
        android:layout_marginTop="500dp"
        />

    <TextView
        android:id="@+id/text_profit_contract_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_profit_contract_summary"
        android:textSize="16sp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="250dp"
        />

    <Button
        android:id="@+id/button_contract_2_next"
        style="@style/MyButton"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="550dp"
        android:text="@string/confirm_contract"
        android:gravity="center"
        android:layout_centerHorizontal="true"
       />



</RelativeLayout>