<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/lock"

            />

        <TextView
            android:id="@+id/project_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="20dp"
            android:text="@string/project_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/project_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="55dp"
            android:text="@string/project_symbol"
            android:textColor="#d3d3d3"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/project_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="90dp"
            android:text="@string/project_size"

            />

        <TextView
            android:id="@+id/est_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="90dp"
            android:text="@string/project_est_return"

            />

        <TextView
            android:id="@+id/project_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="90dp"
            android:text="@string/project_length"

            />

        <TextView
            android:id="@+id/project_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="115dp"
            android:text="@string/project_size_label"
            android:textSize="10sp"

            />

        <TextView
            android:id="@+id/est_return_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="115dp"
            android:text="@string/project_est_return_label"
            android:textSize="10sp"

            />

        <TextView
            android:id="@+id/project_length_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="295dp"
            android:layout_marginTop="115dp"
            android:text="@string/project_length_label"
            android:textSize="10sp"

            />

        <TextView
            android:id="@+id/trust_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="328dp"
            android:layout_marginTop="65dp"
            android:text="@string/project_trust_level_label"
            android:textSize="10sp" />

        <ImageView
            android:id="@+id/trust_level_box"
            android:layout_width="110dp"
            android:layout_height="82dp"
            android:layout_gravity="end"
            android:src="@drawable/trust_box"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp" />


    </android.support.v7.widget.CardView>