<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/lock"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_username"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/member_since"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="55dp"
            android:text="@string/member_since"
            android:textColor="#d3d3d3"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/number_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="90dp"
            android:text="@string/number_projects"
            android:textSize="12sp"

            />

        <TextView
            android:id="@+id/invested_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="215dp"
            android:layout_marginTop="90dp"
            android:textSize="12sp"
            android:text="@string/invested_in"

            />

        <TextView
            android:id="@+id/project_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="90dp"
            android:textSize="12sp"
            android:text="@string/profitability"

            />

        <TextView
            android:id="@+id/label_number_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="115dp"
            android:text="@string/label_number_projects"
            android:textSize="10sp"

            />

        <TextView
            android:id="@+id/label_invested_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="224dp"
            android:layout_marginTop="115dp"
            android:text="@string/label_invested_in"
            android:textSize="10sp"

            />

        <TextView
            android:id="@+id/label_profitability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="305dp"
            android:layout_marginTop="115dp"
            android:text="@string/label_profitability"
            android:textSize="10sp"

            />


        <TextView
            android:id="@+id/trust_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="322dp"
            android:layout_marginTop="65dp"
            android:text="@string/project_trust_level_label"
            android:textSize="10sp" />

        <ImageView
            android:id="@+id/trust_level_box"
            android:layout_width="110dp"
            android:layout_height="82dp"
            android:layout_gravity="end"
            android:src="@drawable/trust_box"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp" />



    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>